--- a/templates/financas/lista.html
+++ b/templates/financas/lista.html
@@ -25,6 +25,9 @@
   <div class="col-auto ms-auto">
     <a href="{% url 'financas:criar' %}" class="btn btn-primary">Nova</a>
   </div>
+  <div class="col-auto">
+  <a href="{% url 'financas:recorrencias' %}" class="btn btn-outline-secondary">Recorrências</a>
+</div>
 </form>
 
 <div class="row g-3 mb-4">
